--- a/code/v2/BehindFood/www/css/index.css
+++ b/code/v2/BehindFood/www/css/index.css
@@ -44,6 +44,36 @@
     vertical-align: middle;
 }
 
+#br-icon{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 100;
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.58);
+    -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    -webkit-transform:  scale(0.92);
+        transform: scale(0.92);
+    background-image: url(icon.png);
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#br-icon::before{
+    background-image: url(icon.png);
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+    color: #000;
+    font-size: 28px;
+    font-weight: 600;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     body{
