--- a/code/v2/BehindFood/www/css/index.css
+++ b/code/v2/BehindFood/www/css/index.css
@@ -1,54 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700');
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: hidden; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  text-align: center;
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    text-align: center;
 }
 
 /* Modal Content/Box */
 .modal-content {
-  /* background-color: #fefefe; */
-  margin: 10px; auto; /* 15% from the top and centered */
-  /*padding: 10px;*/
-  /* border: 1px solid #888; */
-  /*width: 95%;  Could be more or less, depending on screen size */
+    /* background-color: #fefefe; */
+    margin: 10px; auto; /* 15% from the top and centered */
+    /*padding: 10px;*/
+    /* border: 1px solid #888; */
+    /*width: 95%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .close:hover,
-.close:focus {
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
+    .close:focus {
+    color: white;
+    text-decoration: none;
+cursor: pointer;
 }
 
 #myModal img {
-    height: 95%;
-    padding: 10px;
-    vertical-align: middle;
+    width: 100%;
 }
 
 #br-icon{
     position: fixed;
     bottom: 30px;
     right: 30px;
-    z-index: 100;
+    z-index: 1;
     height: 50px;
     width: 50px;
     border-radius: 100%;
