--- a/code/v2/BehindFood/www/css/index.css
+++ b/code/v2/BehindFood/www/css/index.css
@@ -14,6 +14,37 @@
     text-align: center;
 }
 
+#myLoadingModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    text-align: center;
+}
+
+#myProgressDiv {
+    border-radius: 15px;
+    padding: 20px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: lightgray;
+    font-family: sans-serif;
+}
+
+#myBar {
+    width: 1%;
+    height: 30px;
+    background-color: blue;
+}
+
 /* Modal Content/Box */
 .modal-content {
     /* background-color: #fefefe; */
